@@ -4,6 +4,12 @@ Changelog
 1.1.1 - unreleased
 ------------------
 
+* When deleting items from a container using manage_delObjects,
+  check for the "DeleteObjects" permission on each item being
+  deleted. This fixes
+  http://code.google.com/p/dexterity/issues/detail?id=252
+  [davisagli]
+
 1.1 - 2011-11-26
 ----------------
 
